fix and add testes
