# src/docs/swagger.yaml
@@ -437,7 +437,7 @@ paths:
           description: Sort by field
           schema:
             type: string
-            enum: [ name, average_time_tracking, maximum_time_tracking, minimum_time_tracking, success_count ]
+            enum: [ name, average_completed_at, maximum_completed_at, minimum_completed_at, success_count ]
           example: name
         - in: query
           name: sortOrder
@@ -470,11 +470,11 @@ paths:
                           type: string
                         name:
                           type: string
-                        average_time_tracking:
+                        average_completed_at:
                           type: number
-                        maximum_time_tracking:
+                        maximum_completed_at:
                           type: number
-                        minimum_time_tracking:
+                        minimum_completed_at:
                           type: number
                         success_count:
                           type: number
@@ -541,7 +541,7 @@ paths:
           description: Sort by field
           schema:
             type: string
-            enum: [ title, description, priority, status, due_date, time_tracking ]
+            enum: [ title, description, priority, status, due_date, completed_at ]
           example: title
         - in: query
           name: sortOrder
@@ -576,7 +576,7 @@ paths:
       summary: Update task
       tags:
         - Tasks
-      operationId: File upload
+      operationId: Update task
       security:
         - BearerAuth: [ ]
       parameters:
@@ -594,6 +594,48 @@ paths:
           application/json:
             schema:
               $ref: "#/components/schemas/TaskRequestBody"
+      responses:
+        200:
+          description: Task update
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: string
+                    example: ok
+                  message:
+                    type: string
+                    example: Task update successfully
+    patch:
+      summary: Update task status
+      tags:
+        - Tasks
+      operationId: Update task status
+      security:
+        - BearerAuth: [ ]
+      parameters:
+        - in: path
+          name: id
+          required: true
+          description: ID of the task to retrieve
+          schema:
+            type: string
+            format: uuid
+          example: "3d2052b7-7744-4d52-94dd-e671d476bb43"
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                status:
+                  type: string
+                  enum: [ TO_DO, In_Progress, DONE ]
+                  required: false
+                  default: DONE
       responses:
         200:
           description: Task update
@@ -661,20 +703,11 @@ components:
           enum: [ 1, 2, 3, 4, 5 ]
           required: false
           default: 3
-        status:
-          type: string
-          enum: [ TO_DO, In_Progress, DONE ]
-          required: false
-          default: TO_DO
         due_date:
           type: string
           format: date-time
           required: true
           default: 2024-12-12
-        time_tracking:
-          type: number
-          required: false
-          default: 2
     TaskResponseBody:
       type: object
       properties:
@@ -697,20 +730,11 @@ components:
           enum: [ 1, 2, 3, 4, 5 ]
           required: false
           default: 3
-        status:
-          type: string
-          enum: [ TO_DO, In_Progress, DONE ]
-          required: false
-          default: TO_DO
         due_date:
           type: string
           format: date-time
           required: true
           default: 2024-12-12
-        time_tracking:
-          type: number
-          required: false
-          default: 2
   securitySchemes:
     BearerAuth:
       type: http
