# src/schemas/tasks.schema.ts
@@ -8,9 +8,7 @@ export const TaskCreateSchema = object({
     title: string().min(3).max(128),
     description: string().max(512).nullable().optional(),
     priority: nativeEnum(TaskPriority).optional().default(TaskPriority.MEDIUM),
-    status: nativeEnum(TaskStatus).optional().default(TaskStatus.TO_DO),
-    due_date: coerce.date(), // ISO date format (YYYY-MM-DD)
-    time_tracking: coerce.number().optional() // hours
+    due_date: coerce.date() // ISO date format (YYYY-MM-DD)
   }).strict()
 });
 
@@ -20,13 +18,20 @@ export const TaskUpdateSchema = object({
     assignee_id: string().uuid().optional(),
     title: string().min(3).max(128).optional(),
     description: string().max(512).nullable().optional(),
-    priority: nativeEnum(TaskPriority).optional().default(TaskPriority.MEDIUM).optional(),
-    status: nativeEnum(TaskStatus).optional().default(TaskStatus.TO_DO).optional(),
-    due_date: coerce.date().optional(), // ISO date format (YYYY-MM-DD)
-    time_tracking: coerce.number().optional() // hours
+    priority: nativeEnum(TaskPriority).default(TaskPriority.MEDIUM).optional(),
+    due_date: coerce.date().optional() // ISO date format (YYYY-MM-DD)
+  }).strict()
+});
+
+export const TaskUpdateStatusSchema = object({
+  ...ParamsId,
+  body: object({
+    status: nativeEnum(TaskStatus)
   }).strict()
 });
 
 export type CreateTaskType = TypeOf<typeof TaskCreateSchema>['body'];
 
 export type UpdateTaskType = TypeOf<typeof TaskUpdateSchema>['body'];
+
+export type UpdateTaskStatusType = TypeOf<typeof TaskUpdateStatusSchema>['body'];
